[project]
name = "comfyui-ranbooru"
description = "Ranbooru is an extension for the comfyUI. The purpose of this extension is to add a node that gets a random set of tags from boorus pictures. This is mostly being used to help me test my checkpoints on a large variety of"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Inzaniak/comfyui-ranbooru"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-ranbooru"
Icon = ""
